tests/baselines/reference/privateNameES5Ban(target=es5).errors.txt
tests/cases/conformance/classes/members/privateNames/privateNameES5Ban.ts(3,5): error TS18028: Private identifiers are only available when targeting ECMAScript 2015 and higher.
tests/cases/conformance/classes/members/privateNames/privateNameES5Ban.ts(4,5): error TS18022: A method cannot be named with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNameES5Ban.ts(5,5): error TS18019: 'static' modifier cannot be used with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNameES5Ban.ts(6,12): error TS18022: A method cannot be named with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNameES5Ban.ts(7,9): error TS18023: An accessor cannot be named with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNameES5Ban.ts(8,9): error TS18023: An accessor cannot be named with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNameES5Ban.ts(9,16): error TS18023: An accessor cannot be named with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNameES5Ban.ts(10,16): error TS18023: An accessor cannot be named with a private identifier.


==== tests/cases/conformance/classes/members/privateNames/privateNameES5Ban.ts (8 errors) ====
    class A {
        constructor() {}
        #field = 123;
        ~~~~~~
!!! error TS18028: Private identifiers are only available when targeting ECMAScript 2015 and higher.
        #method() {}
        ~~~~~~~
!!! error TS18022: A method cannot be named with a private identifier.
        static #sField = "hello world";
        ~~~~~~
!!! error TS18019: 'static' modifier cannot be used with a private identifier.
        static #sMethod() {}
               ~~~~~~~~
!!! error TS18022: A method cannot be named with a private identifier.
        get #acc() { return ""; }
            ~~~~
!!! error TS18023: An accessor cannot be named with a private identifier.
        set #acc(x: string) {}
            ~~~~
!!! error TS18023: An accessor cannot be named with a private identifier.
        static get #sAcc() { return 0; }
                   ~~~~~
!!! error TS18023: An accessor cannot be named with a private identifier.
        static set #sAcc(x: number) {}
                   ~~~~~
!!! error TS18023: An accessor cannot be named with a private identifier.
    }
    
    